--- a/mapofblogposts.htm
+++ b/mapofblogposts.htm
@@ -52,7 +52,7 @@
           Alternatively, you can also enter your blog's <b>RSS or Atom feed URL</b>.
         </p>
         <input type="text" id="feedUrl" name="feedUrl" class="inputBox-hint"
-            value="http://terrysdiving.blogspot.com.au” />
+            value= http://terrysdiving.blogspot.com.au />
         <div style="padding: 5px 10px 0 0;">
           <input type="button" id="okButton" name="okButton" value="Fetch my blog!" />
         </div>
